test_suite/tests/ui/identifier/variant_tuple.stderr
error: variant_identifier may only contain unit variants
  --> $DIR/variant_tuple.rs:12:10
   |
12 | #[derive(Deserialize)]
   |          ^^^^^^^^^^^

error: aborting due to previous error

